Update 3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md

--- a/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
@@ -839,7 +839,7 @@ In client-server systems, clients request services from dedicated servers, while
 
 ## 3.5.8 Internet of things ##
 
-The Internet of Things (IoT) refers to a network of physical devices embedded with [sensors](, software, and other technologies that enable them to connect and exchange data over the internet. These devices can range from everyday household items like smart thermostats and refrigerators to complex industrial machinery used in manufacturing, healthcare, and energy systems. Securing these devices is becoming increasingly important.
+The Internet of Things (IoT) refers to a network of physical devices embedded with [sensors](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN3%3A%20Security%20Architecture%20and%20Engineering/3.D.2%20Understanding%20How%20Common%20IoT%20Sensors%20Work.md#3d2-understanding-how-common-iot-sensors-work), software, and other technologies that enable them to connect and exchange data over the internet. These devices can range from everyday household items like smart thermostats and refrigerators to complex industrial machinery used in manufacturing, healthcare, and energy systems. Securing these devices is becoming increasingly important.
 
 One of the most defining features of IoT is its ability to connect objects that were traditionally not connected to the internet. This connectivity allows devices to communicate with each other and with centralized systems, enabling automation, remote monitoring, and real-time data exchange. The pervasive nature of IoT leads to significant advantages such as improved efficiency, and productivity in both consumer and industrial environments.
 IoT devices are often designed to operate with minimal user intervention. Many are autonomous, meaning they collect and analyze data automatically, making decisions or sending alerts based on predefined rules. 
@@ -883,6 +883,34 @@ The following table summarizes key IoT security prctices:
 
 :link: The [NIST Cybersecurity for IoT Program’s](https://www.nist.gov/itl/applied-cybersecurity/nist-cybersecurity-iot-program) mission is to cultivate trust in the IoT and foster an environment that enables innovation on a global scale through standards, guidance, and related tools.
 
-
 :link: [Shodan](https://www.shodan.io/) is a specialized search engine for Internet-connected devices. Unlike Google, which indexes websites, Shodan scans the internet for devices such as servers, webcams, routers, industrial control systems, and IoT devices. It collects metadata about open ports, services, software versions, and sometimes even default credentials.
 
+1. What is the key feature that differentiates a distributed system from a centralized system?
+<details>
+  <summary>Show answer</summary>
+The decentralization of resources, meaning no single node has complete control or represents a single point of failure.
+</details>
+
+2. How does middleware contribute to the efficiency of a distributed system?
+<details>
+  <summary>Show answer</summary>
+Middleware provides a common interface that manages communication, synchronization, and data sharing across nodes, allowing different hardware and software to work together seamlessly.
+</details>
+
+3. Why are Interface Definition Languages (IDLs) important in distributed systems?
+<details>
+  <summary>Show answer</summary>
+IDLs describe services and data structures in a language-agnostic way, enabling technologies like RPC, CORBA, and DCOM to allow components written in different programming languages to communicate transparently.
+</details>
+
+4. What mechanisms help distributed systems remain functional even when some nodes fail?
+<details>
+  <summary>Show answer</summary>
+Fault tolerance mechanisms such as redundancy and replication ensure that the system continues to operate despite individual node failures.
+</details>
+
+5. How do client-server and peer-to-peer architectures differ in distributed systems?
+<details>
+  <summary>Show answer</summary>
+In client-server systems, clients request services from dedicated servers, while in peer-to-peer systems, all nodes are equal and can act as both clients and servers, leading to greater decentralization.
+</details>
