Update 3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md

--- a/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
@@ -885,32 +885,34 @@ The following table summarizes key IoT security prctices:
 
 :link: [Shodan](https://www.shodan.io/) is a specialized search engine for Internet-connected devices. Unlike Google, which indexes websites, Shodan scans the internet for devices such as servers, webcams, routers, industrial control systems, and IoT devices. It collects metadata about open ports, services, software versions, and sometimes even default credentials.
 
-1. What is the key feature that differentiates a distributed system from a centralized system?
+### Open Questions ###
+
+1. How can the "three dumb routers" configuration mitigate the security risks associated with IoT devices, and what are its potential drawbacks?
 <details>
   <summary>Show answer</summary>
-The decentralization of resources, meaning no single node has complete control or represents a single point of failure.
+The "three dumb routers" configuration (or triple-router setup) mitigates security risks by creating a separate, isolated network for IoT devices. This segmentation prevents less-secure IoT devices from directly interacting with and compromising more sensitive devices, like computers and phones, on the primary network. It acts as a defense-in-depth strategy, confining potential attacks to a dedicated IoT zone. A key drawback is the added complexity and cost of purchasing and managing multiple routers. It may also complicate communication between devices on different networks, such as a phone on the trusted network trying to control a smart light on the IoT network, often requiring more advanced routing or a dedicated hub.
 </details>
 
-2. How does middleware contribute to the efficiency of a distributed system?
+2. Why are IoT devices often designed with inadequate security, and what is the long-term impact of this on a device's lifecycle?
 <details>
   <summary>Show answer</summary>
-Middleware provides a common interface that manages communication, synchronization, and data sharing across nodes, allowing different hardware and software to work together seamlessly.
+IoT devices are often designed with inadequate security due to a focus on convenience, cost-effectiveness, and speed to market. Manufacturers may prioritize features and low prices over robust security protocols. The long-term impact is a significant security risk over the device's lifecycle. Since these devices can be in use for many years, a lack of ongoing software updates and security patches from the vendor leaves them vulnerable to new and evolving threats. This makes them easy targets for attackers, turning them into potential entry points for network attacks or parts of a botnet.
 </details>
 
-3. Why are Interface Definition Languages (IDLs) important in distributed systems?
+3. What is a botnet attack, and why are IoT devices particularly susceptible to being used in such attacks?
 <details>
   <summary>Show answer</summary>
-IDLs describe services and data structures in a language-agnostic way, enabling technologies like RPC, CORBA, and DCOM to allow components written in different programming languages to communicate transparently.
+A botnet attack involves a network of private computers or devices (a botnet) infected with malicious software and controlled as a group without the owners' knowledge. These devices, known as "bots," can be used to perform various malicious tasks. IoT devices are particularly susceptible because they often have weak authentication, default passwords that are rarely changed, and lack proper security updates. Their sheer number and constant connectivity make them an ideal army for a botnet, allowing attackers to carry out large-scale Distributed Denial-of-Service (DDoS) attacks by flooding a target with massive amounts of traffic from all the compromised devices.
 </details>
 
-4. What mechanisms help distributed systems remain functional even when some nodes fail?
+4. How does the fragmentation of communication protocols in the IoT landscape create security challenges?
 <details>
   <summary>Show answer</summary>
-Fault tolerance mechanisms such as redundancy and replication ensure that the system continues to operate despite individual node failures.
+The wide variety of communication protocols (e.g., Wi-Fi, Bluetooth, Zigbee) in the IoT landscape creates a fragmented security landscape, making it difficult to apply standardized security measures. Each protocol has different specifications and security features, which means security teams must manage a diverse and heterogeneous environment. This complexity makes it harder to implement uniform policies, conduct regular security audits, and ensure all devices are adequately protected. The lack of a single, unified security framework increases the risk that some devices may be overlooked or poorly secured, creating potential entry points for attackers.
 </details>
 
-5. How do client-server and peer-to-peer architectures differ in distributed systems?
+5. Beyond technical measures, what proactive steps can consumers and organizations take to secure their IoT devices and data?
 <details>
   <summary>Show answer</summary>
-In client-server systems, clients request services from dedicated servers, while in peer-to-peer systems, all nodes are equal and can act as both clients and servers, leading to greater decentralization.
+Both consumers and organizations should adopt proactive security habits. A crucial first step is to never trust default settings; always change default usernames and passwords immediately after setup. Regularly checking for and installing firmware or software updates is also vital, as these often contain security patches. Organizations should implement strong management and tracking policies to monitor every device on the network. Consumers should also be mindful of the data being collected and transmitted by their devices, ensuring that sensitive information is properly encrypted and that they are using secure, private networks.
 </details>
