Update 3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md

--- a/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
@@ -916,3 +916,124 @@ The wide variety of communication protocols (e.g., Wi-Fi, Bluetooth, Zigbee) in 
   <summary>Show answer</summary>
 Both consumers and organizations should adopt proactive security habits. A crucial first step is to never trust default settings; always change default usernames and passwords immediately after setup. Regularly checking for and installing firmware or software updates is also vital, as these often contain security patches. Organizations should implement strong management and tracking policies to monitor every device on the network. Consumers should also be mindful of the data being collected and transmitted by their devices, ensuring that sensitive information is properly encrypted and that they are using secure, private networks.
 </details>
+
+## 3.5.9 Microservices (e.g. Application Programming Interfaces) ##
+
+Microservices architecture is a design style in software development that structures an application as a collection of loosely coupled services. These services are small, independent, and built around business capabilities, enabling them to be developed, deployed, and maintained separately. This architecture **contrasts with the traditional monolithic approach**, where applications are tightly integrated and typically deployed as a single unit. Microservices have become increasingly popular because they offer scalability, flexibility, and agility in application development, especially in cloud environments.
+
+:necktie: Use microservices when your application must scale different components independently and evolve quickly with minimal downtime, but stick to a monolithic approach when your system is small, tightly coupled, and simplicity of deployment is more valuable than granular scalability.
+
+The defining feature of microservices is the decomposition of an application into multiple, smaller, and independently deployable services. Each microservice is built around a specific business function or capability, such as user authentication, payment processing, or inventory management. These services communicate with each other through well-defined APIs, often using protocols such as HTTP, REST, or messaging queues.
+Each microservice can be developed, deployed, and scaled independently, which allows for greater flexibility and faster release cycles. This independence facilitates continuous integration and continuous deployment (CI/CD) pipelines, making it easier to update parts of an application without disrupting the entire system. Microservices are typically built using different technologies and programming languages, depending on the specific needs of each service, which adds to their flexibility and adaptability.
+
+Here the example of a microservice architecture:
+
+```mermaid
+flowchart TD
+    subgraph Client["Client Applications"]
+        W1[Web App Browser-based frontend]
+        M1[Mobile App Android / iOS frontend ]
+    end
+
+    subgraph API["API Gateway "]
+    end
+
+    subgraph Services["Microservices"]
+        A[User Service Manages accounts, profiles]
+        B[Order Service Tracks purchases and orders]
+        C[Inventory Service Manages stock levels]
+        D[Payment Service Handles transactions securely]
+    end
+
+    subgraph Infra["Shared Infrastructure"]
+        DB[(Databases per Service Each microservice stores its own data)]
+        MON[Monitoring & Logging Tracks performance and errors]
+        AUTH[Authentication / Authorization\nControls access and permissions]
+    end
+
+    W1 --> API
+    M1 --> API
+    API --> A
+    API --> B
+    API --> C
+    API --> D
+
+    A --- DB
+    B --- DB
+    C --- DB
+    D --- DB
+
+    A --> MON
+    B --> MON
+    C --> MON
+    D --> MON
+
+    API --> AUTH
+    AUTH --> A
+    AUTH --> B
+    AUTH --> C
+    AUTH --> D
+
+    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
+    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+```
+
+Microservices are designed to be **resilient and fault-tolerant**. Because they are independent, failures in one service do not necessarily bring down the entire application. This modularity ensures that microservices can be more easily maintained and updated, with minimal impact on other services in the system. The scalability of microservices allows them to handle varying levels of load by adding more instances of specific services without scaling the entire application.
+
+Another characteristic of microservices is the emphasis on **automation**, particularly in areas like deployment, monitoring, and testing. Microservices are often deployed in cloud-native environments and containerized using technologies like Docker and Kubernetes, which help manage and orchestrate the deployment of services across a distributed infrastructure. These containers provide a consistent environment for running microservices, ensuring that they operate in the same way across different environments, such as development, staging, and production.
+
+Microservices introduce also unique security challenges and vulnerabilities that must be addressed. The distributed nature of microservices means that each service can potentially become an attack surface, increasing the overall complexity of securing an application. 
+One of the primary vulnerabilities is the **exposure of APIs**. Microservices rely heavily on APIs to communicate between services. If these APIs are not properly secured, they can become a vector for attack. Common vulnerabilities include weak authentication mechanisms, insufficient access controls, and unencrypted communication. APIs may be exposed to the public internet or be accessible internally within a private network, and either scenario can pose significant risks if not properly protected. Attackers could exploit vulnerabilities in API endpoints to gain unauthorized access, inject malicious data, or disrupt services.
+
+Another challenge is the management of **authentication and authorization across multiple services**. In a monolithic application, user authentication is often centralized, but in a microservices architecture, each service may need to authenticate users or other services independently. This can lead to inconsistent security policies, making it harder to enforce strong authentication and authorization mechanisms. Additionally, if authentication tokens or credentials are not properly managed, attackers may exploit weaknesses to gain access to sensitive data or escalate their privileges.
+
+The distributed nature of microservices also makes them more susceptible to attacks like **man-in-the-middle (MITM) attacks**. Since microservices communicate over the network, the data being transmitted can be intercepted or altered if not properly encrypted. Ensuring that communication between microservices is encrypted using secure protocols such as TLS is essential for mitigating this risk. Without proper encryption, attackers can tamper with data, steal sensitive information, or inject malicious code into the communication stream.
+
+**Data consistency and integrity** can also be a concern in microservices architectures. Since data is often spread across multiple services, ensuring that data remains consistent and secure across all services is a complex task. For example, if one service is compromised, an attacker could alter the data in a way that affects other services. Distributed databases and messaging systems, commonly used in microservices, may not provide the same level of transactional consistency as traditional monolithic applications, leading to potential data integrity issues.
+
+In addition to these vulnerabilities, microservices introduce security concerns related to the **deployment environment**. Since microservices are often containerized and run in cloud environments, the security of the underlying infrastructure becomes critical. Containers, if not properly configured or isolated, can provide an attacker with a path to access other containers or the host system. Misconfigurations or vulnerabilities in the container orchestration platform (such as Kubernetes) can also expose microservices to attacks. For example, attackers may exploit vulnerabilities in the orchestration system to access sensitive services, manipulate configurations, or deploy malicious containers.
+
+Another significant vulnerability arises from the **complexity of managing the numerous services**, each with its own set of dependencies, configurations, and security settings. The interconnected nature of microservices can make it challenging to maintain a comprehensive view of the security posture across the entire application. If one service is poorly secured, it could become a stepping stone for attackers to move laterally within the system, compromising other services.
+
+Lastly, **monitoring and logging** in a microservices environment are crucial but challenging. With so many independent services running, it becomes difficult to monitor and collect logs in a centralized manner. Without proper monitoring, suspicious activities may go undetected until an attack has already occurred. Moreover, attackers could potentially manipulate logs to hide their actions, making it harder to trace security incidents and respond effectively.
+
+To mitigate the vulnerabilities associated with microservices, organizations must adopt a multi-layered security approach. This includes securing APIs through strong authentication mechanisms, such as OAuth 2.0 or mutual TLS, and implementing robust access control policies to ensure that only authorized users and services can interact with each microservice. Encryption should be enforced for all communication between services, using secure protocols like TLS to prevent data interception.
+Additionally, managing authentication and authorization centrally through a tool like Identity and Access Management (IAM) can help streamline security across the microservices ecosystem. Service-to-service communication should be secured using tokens or certificates, and strict controls should be in place to prevent unauthorized services from accessing sensitive data.
+Proper monitoring and logging are essential for detecting and responding to security incidents in a microservices environment. Centralized logging systems, like ELK Stack or Splunk, can aggregate logs from all services, enabling security teams to detect anomalies and investigate incidents more effectively. Real-time monitoring and alerting can also help detect suspicious activity and mitigate the impact of potential breaches.
+Finally, ensuring the security of the underlying infrastructure, such as containers and orchestration platforms, is critical. Organizations should adopt best practices for container security, including using trusted container images, isolating containers, and configuring orchestration platforms like Kubernetes with strong security controls. Regular vulnerability assessments and updates should be performed to address any security gaps in the microservices infrastructure.
+
+:necktie: Microservices can make auditing, patching, and data subject rights harder, so compliance requires extra attention to centralized governance and consistent security policies.
+
+### Open Questions ###
+
+1. Why are microservices considered more flexible and scalable than monolithic architectures?
+<details>
+  <summary>Show answer</summary>
+Microservices are built as small, independent services, each focused on a specific business capability. Because they can be developed, deployed, and scaled separately, organizations can increase resources only for the services that need it rather than scaling the entire application. This flexibility supports faster updates, continuous deployment, and improved fault isolation compared to monolithic architectures, where every change requires redeploying the entire system.
+</details>
+
+2. What challenges do microservices introduce in securing applications, and why are APIs a major concern?
+<details>
+  <summary>Show answer</summary>
+Microservices rely heavily on APIs to communicate with each other, creating many potential attack surfaces. If APIs lack proper authentication, access controls, or encryption, attackers can intercept or manipulate data, perform unauthorized actions, or disrupt services. Unlike monolithic systems with centralized security, each microservice must be individually protected, making it harder to maintain consistent security policies and prevent vulnerabilities from spreading across the system.
+</details>
+
+3. How does the use of containers and orchestration platforms like Kubernetes improve microservices deployment, and what security risks do they introduce?
+<details>
+  <summary>Show answer</summary>
+Containers provide a consistent runtime environment, ensuring that microservices behave the same in development, testing, and production. Orchestration tools like Kubernetes automate scaling, load balancing, and service discovery. However, if containers or orchestration platforms are misconfigured, attackers could exploit vulnerabilities to move laterally between services or gain control over critical infrastructure. This makes secure configuration, image validation, and regular updates essential.
+</details>
+
+4. Why is centralized monitoring and logging critical in a microservices environment, and what happens if it’s missing?
+<details>
+  <summary>Show answer</summary>
+With many independent services running, security events and failures can be scattered across multiple logs, making it difficult to detect and respond to incidents. Centralized monitoring and logging tools, such as ELK Stack or Splunk, collect data from all services into one place, allowing teams to detect anomalies and investigate attacks faster. Without this visibility, suspicious activity might go unnoticed until significant damage occurs.
+</details>
+
+5. In what situations would you still choose a monolithic approach instead of microservices?
+<details>
+  <summary>Show answer</summary>
+A monolithic architecture is more suitable for small, tightly coupled applications where simplicity is more important than granular scalability. When the team is small, deployment frequency is low, and the application doesn’t require independent scaling of components, a single deployable unit reduces complexity and operational overhead. This avoids the need for sophisticated orchestration, API management, and distributed security controls that microservices demand.
+</details>
+
+
