Update 3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md

--- a/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
@@ -1036,4 +1036,68 @@ With many independent services running, security events and failures can be scat
 A monolithic architecture is more suitable for small, tightly coupled applications where simplicity is more important than granular scalability. When the team is small, deployment frequency is low, and the application doesn’t require independent scaling of components, a single deployable unit reduces complexity and operational overhead. This avoids the need for sophisticated orchestration, API management, and distributed security controls that microservices demand.
 </details>
 
+## 3.5.10 Containerization ##
+
+Containerization is a technology that allows applications to be packaged with all their dependencies into a self-contained unit called a container. This makes it easy to deploy and run applications consistently across different environments. Popular tools for containerization include Docker and Kubernetes (or OpenShift), which provide the foundation for managing containers at scale.
+
+:bulb: **Docker** is a containerization platform that allows applications to run in isolated environments called containers, ensuring consistency across different systems. It uses lightweight images, defined by Dockerfiles, and a layered filesystem to optimize storage and deployment. Docker enables rapid scaling and portability, making it ideal for microservices, CI/CD pipelines, and cloud-native development.
+
+:bulb: **Kubernetes** is an open-source container orchestration platform that automates the deployment, scaling, and management of containerized applications. It uses a declarative configuration model with YAML manifests and ensures high availability through features like self-healing, load balancing, and rolling updates. Kubernetes operates through a cluster of nodes, managed by a control plane, where workloads run inside pods, providing flexibility and scalability across cloud and on-prem environments.
+
+Containers are lightweight because they share the host’s operating system kernel, unlike virtual machines that require separate operating systems. This makes containers resource-efficient and quick to deploy, promoting scalability and portability. Containers allow for faster development cycles and are widely used in continuous integration/continuous deployment (CI/CD) pipelines. They are ideal for cloud-native applications, supporting the rapid scaling of services as demand changes.
+
+```mermaid
+graph TD
+    subgraph Virtual Machine (VM)
+        direction TD
+        A[Hardware] --> B[Host OS]
+        B --> C[Hypervisor (e.g., VMware)]
+        C --> D{Guest OS}
+        D --> E[Binaries/Libraries]
+        E --> F[Application]
+    end
+
+    subgraph Container
+        direction TD
+        G[Hardware] --> H[Host OS]
+        H --> I[Container Engine (e.g., Docker)]
+        I --> J{Application and Dependencies}
+        J --> K[Binaries/Libraries]
+        K --> L[Application]
+    end
+
+    subgraph Key Differences
+      direction LR
+      M[VMs virtualize the hardware, each with its own full OS, leading to more overhead.]
+      N[Containers virtualize the OS, sharing the host OS kernel, making them lightweight.]
+      O[VMs provide strong isolation.]
+      P[Containers offer less isolation but are highly portable.]
+    end
+
+    A --- G
+    A --- M
+    G --- M
+
+    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
+    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+```
+
+Vulnerabilities of Containerization are:
+
+1. Container Escape Vulnerabilities occurs when a malicious process in a container gains access to the host system or other containers. Since containers share the host’s OS kernel, vulnerabilities in the kernel or container runtime can lead to this type of breach, allowing attackers to escalate privileges and compromise the host system. Regular updates and patches for the OS and container runtime can help mitigate this risk.
+
+2. Insecure Images. Containers rely on container images, which are snapshots of an application and its dependencies. If these images are not properly vetted, they may contain vulnerabilities or malware, especially if pulled from untrusted public registries. To mitigate this risk, use only trusted sources for container images and perform regular vulnerability scans.
+
+3. Lack of Isolation. Although containers offer process and resource isolation, they share the host OS kernel, which can lead to security risks if containers are not properly isolated. Misconfigurations, such as running containers with excessive privileges, can allow attackers to move between containers or access the host. Proper configuration and the principle of least privilege are essential to minimize these risks.
+
+4. Containers often communicate over networks, and if this communication is not properly secured, it can be intercepted or altered. Using secure protocols like TLS for encryption and implementing network policies to limit container-to-container communication can help secure these interactions.
+
+5. Insufficient Logging and Monitoring. The dynamic nature of containerized environments makes monitoring and logging more complex. Containers can be created and destroyed quickly, which can make it difficult to detect suspicious activities or breaches. Organizations should implement centralized logging and continuous monitoring to detect anomalies and respond to potential threats.
+
+6. Misconfigured Secrets Management. Containers often require sensitive data such as API keys or database credentials. If these secrets are not securely managed—such as by being hardcoded into container images—they can be exposed to attackers. Using a secrets management solution and avoiding storing secrets in plaintext or environment variables is crucial for securing sensitive data.
+
+7. Inadequate Resource Allocation. Containers that consume too many resources can lead to system performance degradation or denial-of-service (DoS) attacks. Properly configuring resource limits for each container ensures that no single container can exhaust host resources and disrupt the entire system.
+
+:necktie: containers should be configured with the principle of least privilege, and resources should be allocated carefully to prevent system overload.
+
 
