Update 3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md

--- a/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
@@ -1048,7 +1048,7 @@ Containers are lightweight because they share the host’s operating system kern
 
 ```mermaid
 graph TD
-    subgraph Virtual Machine (VM)
+    subgraph Virtual Machine - VM
         direction TD
         A[Hardware] --> B[Host OS]
         B --> C[Hypervisor (e.g., VMware)]
@@ -1060,7 +1060,7 @@ graph TD
     subgraph Container
         direction TD
         G[Hardware] --> H[Host OS]
-        H --> I[Container Engine (e.g., Docker)]
+        H --> I[Container Engine e.g., Docker]
         I --> J{Application and Dependencies}
         J --> K[Binaries/Libraries]
         K --> L[Application]
