Update 3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md

--- a/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
@@ -1047,36 +1047,32 @@ Containerization is a technology that allows applications to be packaged with al
 Containers are lightweight because they share the host’s operating system kernel, unlike virtual machines that require separate operating systems. This makes containers resource-efficient and quick to deploy, promoting scalability and portability. Containers allow for faster development cycles and are widely used in continuous integration/continuous deployment (CI/CD) pipelines. They are ideal for cloud-native applications, supporting the rapid scaling of services as demand changes.
 
 ```mermaid
-graph TD
+
+graph LR
     subgraph Virtual Machine - VM
-        direction TD
+        direction LR
         A[Hardware] --> B[Host OS]
-        B --> C[Hypervisor (e.g., VMware)]
-        C --> D{Guest OS}
+        B --> C[Hypervisor<br>e.g., VMware]
+        C --> D{Guest OS<br>Full Stack}
         D --> E[Binaries/Libraries]
         E --> F[Application]
     end
 
     subgraph Container
-        direction TD
+        direction LR
         G[Hardware] --> H[Host OS]
-        H --> I[Container Engine e.g., Docker]
-        I --> J{Application and Dependencies}
+        H --> I[Container Engine<br>e.g., Docker]
+        I --> J{Application and its<br>Dependencies}
         J --> K[Binaries/Libraries]
         K --> L[Application]
     end
 
-    subgraph Key Differences
-      direction LR
-      M[VMs virtualize the hardware, each with its own full OS, leading to more overhead.]
-      N[Containers virtualize the OS, sharing the host OS kernel, making them lightweight.]
-      O[VMs provide strong isolation.]
-      P[Containers offer less isolation but are highly portable.]
+    subgraph Key Differences VMs vs Containers
+        M[VMs virtualize the hardware, each with its own full OS, leading to more overhead.]
+        N[Containers virtualize the OS, sharing the host OS kernel, making them lightweight and fast.]
+        O[VMs provide strong isolation and are great for running different OSs.]
+        P[Containers offer less isolation but are highly portable and efficient.]
     end
-
-    A --- G
-    A --- M
-    G --- M
 
     classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
     classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
@@ -1100,4 +1096,34 @@ Vulnerabilities of Containerization are:
 
 :necktie: containers should be configured with the principle of least privilege, and resources should be allocated carefully to prevent system overload.
 
+### Open Questions ###
 
+1. How does containerization differ from traditional virtual machines in terms of resource usage and performance?
+<details>
+  <summary>Show answer</summary>
+Containers share the host operating system kernel instead of running separate full operating systems like virtual machines. This makes them lighter, faster to start, and more resource-efficient, enabling higher application density on the same hardware.
+</details>
+
+2. What role does Docker play in containerization, and how does it support application development?
+<details>
+  <summary>Show answer</summary>
+Docker packages applications and their dependencies into lightweight containers, ensuring consistent behavior across environments. It uses layered images defined by Dockerfiles, which optimize storage and streamline deployment—ideal for microservices, CI/CD pipelines, and cloud-native development.
+</details>
+
+3. Why is Kubernetes important for managing containers at scale, and what features does it provide?
+<details>
+  <summary>Show answer</summary>
+Kubernetes automates container deployment, scaling, and lifecycle management using a declarative YAML configuration. It offers features like self-healing (restarting failed containers), load balancing, and rolling updates, ensuring high availability and efficient use of infrastructure.
+</details>
+
+4. What are common security vulnerabilities in containerized environments, and how can they be mitigated?
+<details>
+  <summary>Show answer</summary>
+Key risks include container escape, insecure images, misconfigured privileges, exposed secrets, and insufficient monitoring. Mitigation strategies include regular updates, using trusted images, applying least privilege, encrypting communications, centralized logging, and proper secrets management.
+</details>
+
+5. How does containerization support modern development practices such as CI/CD and cloud-native applications?
+<details>
+  <summary>Show answer</summary>
+Containers enable consistent builds that run identically across development, testing, and production, reducing integration issues. Their portability and rapid startup times allow continuous integration and continuous deployment pipelines to deliver updates faster and scale dynamically with demand.
+</details>
